--- a/latex/oppgave.tex
+++ b/latex/oppgave.tex
@@ -23,8 +23,9 @@
 \input{matter/baseline}
 \input{matter/ivector}
 \input{matter/classifier}
-\part{implementation}
 
+\part{implementation}
+\input{matter/implbasic}
 
 \part{results}
 
