--- a/latex/references.bib
+++ b/latex/references.bib
@@ -150,7 +150,12 @@
   booktitle={Twelfth Annual Conference of the International Speech Communication Association},
   year={2011}
 }
-
+@inproceedings{martin2003nist,
+  title={NIST 2003 language recognition evaluation},
+  author={Martin, A.F. and Przybocki, M.A.},
+  booktitle={Eighth European Conference on Speech Communication and Technology},
+  year={2003}
+}
 
 
 
