--- a/latex/matter/implbasic.tex
+++ b/latex/matter/implbasic.tex
@@ -39,11 +39,24 @@ For the final evaluation of the systems the 2003 NIST Language Recognition Evalu
 
 The NIST set includes data of 3, 10 and 30 seconds duration of speech. While our main focus has been on the 30 second segments, we will report results for the other segment lengths as well. The segment lengths were enforced by using an automatic speech activity algorithm to split utterances to the correct size. For each language and duration more than 80 segments from 40 speakers were provided. 
 
-\section{Evaluation Metrics}
+\section{Phoneme Transcription}
 
-As briefly explained in section \ref{sect:detvsid}, it is not clear how we should evaluate the system's performance without knowing the application it will be used for. For intermediate results when comparing design decisions, we have used the percentage of correctly identified utterances given by equation \ref{lreiddec}. This score easily calculated and should be correlated with our other metrics. A more thorough understanding of the system's performance is given by it's \emph{detection error tradeoff-} or DET-curve. This is a plot of the false accept rate against the false reject rate when using different detection thresholds in equation \ref{lredeceq}. The equal error rate (EER) is the point where the system makes just as many false accepts as false rejects. This is a commonly used metric to reducie the information from the DET-curve down to a single number. We have also included the $C_{\text{Det}}$ metric which measures the expected cost of making a deteciton decision. This is the primary evaluation metric used for the NIST evaluations, and is for each target language defined to be \cite{martin2003nist}
-\begin{align*}
-C_{\text{Det}} &=(C_{\text{False reject}}P_{\text{False reject} | \text{Target}}P_{\text{Target}})+\\
-&(C_{\text{False accept}}P_{\text{False accept} | \text{Non-target}}P_{\text{Non-target}}).
-\end{align*}
-By adjusting the cost of making different errors, this metric can be used to evaluate the system for a wide range of application requirements. In the NIST evaluation plan both costs are set to $1$, and the priors to $0.5$. 
+Phoneme transcription for all the systems were performed using the Brno University of Technology (BUT) phoneme recognizer \footnote{\url{http://speech.fit.vutbr.cz/software/phoneme-recognizer-based-long-temporal-context}}. The recognizers utilizes the long temporal context features as explained in section \ref{sect:phnrec}. The phoneme recognizer was trained on Hungarian utterances and has previously performed well on language recognition tasks \cite{lrivector, torres2008mitll}. The phoneme recognizer is trained distinguish $62$ classes. The high number of classes can make training material sparse when using higher order $n$-grams. In order to reduce the sparsity any token labeled as noise were ignored, and consecutive tokens of silence were stripped to just one token. Experiments were also performed using a many-to-one token mapping suggested in \cite{torres2008mitll}. With this mapping, information about phoneme duration is ignored resulting in only $32$ different tokens. This mapping can severly reduce the training time for some of the systems.
+
+After utterances have been transcribed, we split the transcription into parts so that e.g. the length of a development set utterance match the length of the test set utterances. Since the system's performance should be dependent on the utterance length, this should make development scores more closely approximate the score we would expect during final evaluations. 
+
+
+\section{Gaussian Backend}
+\label{sect:implgaussback}
+
+For processing of the score-vectors we used the Focal Multiclass Toolkit \footnote{\url{https://sites.google.com/site/nikobrummer/focalmulticlass}}. The toolkit can be applied to a wide range of machine-learning problems, but it includes methods that are specifically designed for the NIST language recognition evaluation.  E.g. find detection threshold values that minimizes the expected cost, $C_{\text{det}}$, of a recognition decision. It also implements training and evaluation using GMMs which were discussed in section \ref{sect:backendscoring}. An issue with the backend was that it couldn't be trained on score-vectors from the training set. This is because the language models and classifiers are expected to perform very well  when tested on it's training data. The score-vectors would then be unrepresentative for the score-vectors we would expect from unseen data. A possible solution would be to introduce a separate training set just for the backend training. Instead of reducing the ammount of training material for other system components, we opted for training the backend with the development data. Since we don't have a set for development testing of the backend, we now couldn't experiment with- and compare different backends. For this reason we used simple and easily trained models in the backend that should ensure reasonable results. 
+
+For each language, a single Gaussian Multivariate Model was trained. We followed the recommandation given in \cite[p. 70]{matejkalre} to treat dialects as separate languages in the rest of the system, and fuse the scores for these languages in the backend. This makes the single Gaussian Model an obvious source of bias error, since we expect that score-vectors from utterances of different dialects will be located in separate clusters of score-vectors. On the other hand, we could easily end up with an over-fitted model if we were to represent languages with Gaussian Mixtures. 
+
+The Gaussian backend was also responsible for recognizing the out of set language in the evaluation set. If we assume that the 
+
+\section{Baseline System}
+
+The baseline system is an implementation of the smoothed language model described in chapter \ref{sect:baselinetheory}. For each language, one model is created for up to phoneme trigrams. The $k$-parameter that determines the model's degree of smoothing was set independently for each language. A range of parameter values were tested for each language, and the parameter that maximized the log-likelihood in equation \ref{basescore} was chosen. Since smoothing adds bias to the model, the likelihood for the training set will decrease for a higher value of $k$. Because of this, the total likelihood over the development set was used for the tests. An other strategy might have been to use the same value for $k$ for each language. We could then select the value that maximized the identification rate using equation \ref{lreiddec} with the likelihoods produced from the model. The former approach was used since trigrams not seen in the training set appeared with clearly different frequency for each language. This indicated that each model would require a different degree of smoothing. It did not seem feasible to maximize the identification rate using different $k$-values for each language as the parameter search-space would be too great. 
+
+The identification rate for 30, 10 and 3 second development utterances all seemed to benefit slightly from using the unmapped phoneme transcript and it was therefore used for the final system. The absolute increase in the identification rate was never more than $2$ \% for any of the segment durations. The log-likelihoods where then used as a feature-vector for the Gaussian backend discussed in seciton \ref{sect:implgaussback}.
