--- a/latex/references.bib
+++ b/latex/references.bib
@@ -21,7 +21,7 @@
   year={1994},
   publisher={IEEE}
 }
-@inproceedings{soufifar2011ivector,
+@inproceedings{lrivector,
   title={iVector Approach to Phonotactic Language Recognition},
   author={Soufifar, M. and Kockmann, M. and Burget, L. and Plchot, O. and Glembek, O. and Svendsen, T.},
   booktitle={Twelfth Annual Conference of the International Speech Communication Association},
@@ -84,6 +84,13 @@
   author = {Schwarz, P.},
   year = {2008},
   school = {Brno University of Technology, Faculty of Information Technology},
+  type = {Doctoral thesis}
+}
+@phdthesis{matejkalre,
+  title = {Phonotactic and Acoustic Language Recognition},
+  author = {Pavel Matějka},
+  year = {2008},
+  school = {Brno University of Technology, Faculty of Electrical Engineering and Communication},
   type = {Doctoral thesis}
 }
 @Article{liblinear,
@@ -155,6 +162,13 @@
   author={Martin, A.F. and Przybocki, M.A.},
   booktitle={Eighth European Conference on Speech Communication and Technology},
   year={2003}
+}
+@inproceedings{torres2008mitll,
+  title={The MITLL NIST LRE 2007 Language Recognition System},
+  author={Torres-Carrasquillo, P.A. and Singer, E. and Campbell, W. and Gleason, T. and McCree, A. and Reynolds, D.A. and Richardson, F. and Shen, W. and Sturim, D.},
+  booktitle={Proc. Interspeech},
+  year={2008},
+  pages={719-723}
 }
 
 
